<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.myrsoft.apilapuntainmobiliaria.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_salir"
        android:name="com.myrsoft.apilapuntainmobiliaria.ui.salir.SalirFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_salir" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.myrsoft.apilapuntainmobiliaria.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_nav_perfil_to_cambiarClaveFragment"
            app:destination="@id/cambiarClaveFragment" />
    </fragment>
    <fragment
        android:id="@+id/pagosFragment"
        android:name="com.myrsoft.apilapuntainmobiliaria.ui.contratos.PagosFragment"
        android:label="Pagos"
        tools:layout="@layout/fragment_pagos" >
        <action
            android:id="@+id/action_pagosFragment_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.myrsoft.apilapuntainmobiliaria.ui.contratos.ContratosFragment"
        android:label="Contratos"
        tools:layout="@layout/fragment_contratos" >
        <action
            android:id="@+id/action_nav_contratos_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.myrsoft.apilapuntainmobiliaria.ui.inmuebles.InmueblesFragment"
        android:label="Inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_detalleInmuebleFragment"
            app:destination="@id/detalleInmuebleFragment" />
        <action
            android:id="@+id/action_nav_inmuebles_to_nuevoInmuebleFragment"
            app:destination="@id/nuevoInmuebleFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.myrsoft.apilapuntainmobiliaria.ui.inquilinos.InquilinosFragment"
        android:label="Inquilinos"
        tools:layout="@layout/fragment_inquilinos" >
        <action
            android:id="@+id/action_nav_inquilinos_to_detalleInquilinoFragment"
            app:destination="@id/detalleInquilinoFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleContratoFragment"
        android:name="com.myrsoft.apilapuntainmobiliaria.ui.contratos.DetalleContratoFragment"
        android:label="Detalle del contrato"
        tools:layout="@layout/fragment_detalle_contrato" >
        <action
            android:id="@+id/action_detalleContratoFragment_to_pagosFragment"
            app:destination="@id/pagosFragment" />
        <action
            android:id="@+id/action_detalleContratoFragment_to_nav_contratos"
            app:destination="@id/nav_contratos" />
    </fragment>
    <fragment
        android:id="@+id/detalleInmuebleFragment"
        android:name="com.myrsoft.apilapuntainmobiliaria.ui.inmuebles.DetalleInmuebleFragment"
        android:label="Detalle del inmueble"
        tools:layout="@layout/fragment_detalle_inmueble" >
        <action
            android:id="@+id/action_detalleInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/detalleInquilinoFragment"
        android:name="com.myrsoft.apilapuntainmobiliaria.ui.inquilinos.DetalleInquilinoFragment"
        android:label="Detalle del inquilino"
        tools:layout="@layout/fragment_detalle_inquilino" >
        <action
            android:id="@+id/action_detalleInquilinoFragment_to_nav_inquilinos"
            app:destination="@id/nav_inquilinos" />
    </fragment>
    <fragment
        android:id="@+id/nuevoInmuebleFragment"
        android:name="com.myrsoft.apilapuntainmobiliaria.ui.inmuebles.NuevoInmuebleFragment"
        android:label="Nuevo inmueble" >
        <action
            android:id="@+id/action_nuevoInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/cambiarClaveFragment"
        android:name="com.myrsoft.apilapuntainmobiliaria.ui.perfil.CambiarClaveFragment"
        android:label="Cambiar clave"
        tools:layout="@layout/fragment_cambiar_clave" >
        <action
            android:id="@+id/action_cambiarClaveFragment_to_nav_perfil"
            app:destination="@id/nav_perfil" />
    </fragment>
</navigation>